kneadtime/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kneadtime
  namespace: kneadtime
  labels:
    app.kubernetes.io/name: kneadtime
spec:
  selector:
    app.kubernetes.io/name: kneadtime
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
